--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,43 +3,43 @@ services:
   presence:
     container_name: presence
     hostname: presence
-    image: localhost/tarantula.presence:v1.0  
+    image: tarantula.presence:v1.0  
     networks:
       - net
   profile:
     container_name: profile
     hostname: profile
-    image: localhost/tarantula.profile:v1.0
+    image: tarantula.profile:v1.0
     networks:
       - net  
   inventory:
     container_name: inventory
     hostname: inventory
-    image: localhost/tarantula.inventory:v1.0
+    image: tarantula.inventory:v1.0
     networks:
       - net
   asset:
     container_name: asset
     hostname: asset
-    image: localhost/tarantula.asset:v1.0
+    image: tarantula.asset:v1.0
     networks:
       - net
   tournament:
     container_name: tournament
     hostname: tournament
-    image: localhost/tarantula.tournament:v1.0
+    image: tarantula.tournament:v1.0
     networks:
       - net    
   admin:
     container_name: admin
     hostname: admin
-    image: localhost/tarantula.admin:v1.0
+    image: tarantula.admin:v1.0
     networks:
       - net
   web:
     container_name: web
     hostname: web
-    image: localhost/tarantula.nginx:latest
+    image: tarantula.nginx:latest
     ports:
       - "80:80"
     depends_on:
