--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,24 +4,32 @@ services:
     container_name: presence
     hostname: presence
     image: tarantula.presence:v1.0  
+    ports:
+      - "5000:5000"
     networks:
       - net
   profile:
     container_name: profile
     hostname: profile
     image: tarantula.profile:v1.0
+    ports:
+      - "5002:5002"
     networks:
       - net  
   inventory:
     container_name: inventory
     hostname: inventory
     image: tarantula.inventory:v1.0
+    ports:
+      - "5003:5003"
     networks:
       - net
   asset:
     container_name: asset
     hostname: asset
     image: tarantula.asset:v1.0
+    ports:
+      - "5001:5001"
     networks:
       - net
   tournament:
