--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 name: tarantula
 services:
   presence:
+    restart: unless-stopped
     container_name: presence
     hostname: presence
     image: tarantula.presence:v1.0
@@ -11,6 +12,7 @@ services:
     networks:
       - net
   asset:
+    restart: unless-stopped
     container_name: asset
     hostname: asset
     image: tarantula.asset:v1.0
@@ -23,6 +25,7 @@ services:
     networks:
       - net
   profile:
+    restart: unless-stopped
     container_name: profile
     hostname: profile
     image: tarantula.profile:v1.0
@@ -35,6 +38,7 @@ services:
     networks:
       - net  
   inventory:
+    restart: unless-stopped
     container_name: inventory
     hostname: inventory
     image: tarantula.inventory:v1.0
@@ -47,6 +51,7 @@ services:
     networks:
       - net
   tournament:
+    restart: unless-stopped
     container_name: tournament
     hostname: tournament
     image: tarantula.tournament:v1.0
@@ -57,6 +62,7 @@ services:
     networks:
       - net    
   admin:
+    restart: unless-stopped
     container_name: admin
     hostname: admin
     image: tarantula.admin:v1.0
@@ -70,6 +76,7 @@ services:
     networks:
       - net
   web:
+    restart: unless-stopped
     container_name: web
     hostname: web
     image: tarantula.nginx:v1.0
