--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+        location /shop {
+            proxy_pass http://shop:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
         location /admin {
             proxy_pass http://admin:8080;
             proxy_set_header Host $host;
