--- a/cmd/web/admin/site/protected/parse.snow.flake.id.json
+++ b/cmd/web/admin/site/protected/parse.snow.flake.id.json
@@ -5,8 +5,8 @@
     "Properties":[
         {
             "Name": "snowFlakeId",
-            "Type":"int64",
-            "Reference": "number",
+            "Type":"string",
+            "Reference": "text",
             "Nullable": false
         }
     ]
