--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,9 @@ services:
     volumes:
       - volume_postoffice:/home/tarantula/postoffice
     ports:
-      - "5000:5000"          
+      - "5000:5000"
+    environment:
+      PS_UPSTREAM: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:3000          
     networks:
       - net
   presence:
