--- a/nginx.conf
+++ b/nginx.conf
@@ -47,7 +47,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
         location /postoffice {
-            proxy_pass http://mahjong:8080;
+            proxy_pass http://postoffice:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
