--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,3 +5,12 @@
       - job_name: 'prometheus'
         static_configs:
           - targets: ['localhost:9090']
+      - job_name: 'tarantula.postoffice'
+        metrics_path: /postoffice/metrics
+        static_configs:
+          - targets: ['postoffice:8000']
+      - job_name: 'tarantula.presence'
+        metrics_path: /presence/metrics
+        static_configs:
+          - targets: ['presence:8000']    
+          
