--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,12 +5,16 @@
       - job_name: 'prometheus'
         static_configs:
           - targets: ['localhost:9090']
+      
       - job_name: 'tarantula.postoffice'
         metrics_path: /postoffice/metrics
         static_configs:
           - targets: ['postoffice:8000']
+        bearer_token: 'tarantula_token'
+
       - job_name: 'tarantula.presence'
         metrics_path: /presence/metrics
         static_configs:
-          - targets: ['presence:8000']    
+          - targets: ['presence:8000']
+        bearer_token: 'tarantula_token'      
           
