--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -4,7 +4,7 @@
     scrape_configs:
       - job_name: 'prometheus'
         static_configs:
-          - targets: ['localhost:9090']
+          - targets: ['prometheus:9090']
       
       - job_name: 'tarantula.postoffice'
         metrics_path: /postoffice/metrics
@@ -16,5 +16,36 @@
         metrics_path: /presence/metrics
         static_configs:
           - targets: ['presence:8080']
-        bearer_token: 'tarantula_token'      
+        bearer_token: 'tarantula_token'
+
+      - job_name: 'tarantula.admin'
+        metrics_path: /admin/metrics
+        static_configs:
+          - targets: ['admin:8080']
+        bearer_token: 'tarantula_token'
+
+      - job_name: 'tarantula.asset'
+        metrics_path: /asset/metrics
+        static_configs:
+          - targets: ['asset:8080']
+        bearer_token: 'tarantula_token'
+
+      - job_name: 'tarantula.inventory'
+        metrics_path: /inventory/metrics
+        static_configs:
+          - targets: ['inventory:8080']
+        bearer_token: 'tarantula_token'
+
+      - job_name: 'tarantula.tournament'
+        metrics_path: /tournament/metrics
+        static_configs:
+          - targets: ['tournament:8080']
+        bearer_token: 'tarantula_token'
+
+      - job_name: 'tarantula.mahjong'
+        metrics_path: /mahjong/metrics
+        static_configs:
+          - targets: ['mahjong:8080']
+        bearer_token: 'tarantula_token'  
+
           
