--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,6 +105,7 @@ services:
     env_file:
       - .env  
   prometheus:
+    stop_grace_period: 20s
     restart: unless-stopped
     container_name: prometheus
     hostname: prometheus
