--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,6 +5,9 @@
       - job_name: 'prometheus'
         static_configs:
           - targets: ['prometheus:9090']
+     - job_name: 'node'
+        static_configs:
+          - targets: ['exporter:9100']     
       
       - job_name: 'tarantula.postoffice'
         metrics_path: /postoffice/metrics
