--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -2,10 +2,10 @@
       scrape_interval: 5s
       scrape_timeout: 5s
     scrape_configs:
-      - job_name: 'prometheus'
+      - job_name: 'tarantula.prometheus'
         static_configs:
           - targets: ['prometheus:9090']
-     - job_name: 'node'
+      - job_name: 'tarantula.node'
         static_configs:
           - targets: ['exporter:9100']     
       
