--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,9 +5,10 @@
       - job_name: 'tarantula.prometheus'
         static_configs:
           - targets: ['prometheus:9090']
+      
       - job_name: 'tarantula.node'
         static_configs:
-          - targets: ['exporter:9100']     
+          - targets: ['node:9100']     
       
       - job_name: 'tarantula.postoffice'
         metrics_path: /postoffice/metrics
